# librespot

./: Cargo.toml
connect/: Cargo.toml
connect/src/: discovery.rs
core/src/: config.rs
discovery/: Cargo.toml
discovery/src/: lib.rs  server.rs
src/: main.rs
