[package]
name = "librespot-connect"
version = "0.1.6"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery and Spotify Connect logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
futures-util = { version = "0.3", default_features = false }
log = "0.4"
protobuf = "~2.14.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "sync"] }
tokio-stream = { version = "0.1" }

[dependencies.librespot-core]
path = "../core"
version = "0.1.6"

[dependencies.librespot-playback]
path = "../playback"
version = "0.1.6"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.1.6"
