[package]
name = "librespot-discovery"
version = "0.1.6"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
aes-ctr = "0.6"
base64 = "0.13"
futures-core = "0.3"
hmac = "0.10"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
libmdns = "0.6"
log = "0.4"
rand = "0.8"
serde_json = "1.0"
sha-1 = "0.9"
tokio = { version = "1.0", features = ["sync", "rt"] }
url = "2.0"

[dependencies.librespot-core]
path = "../core"
default_features = false
version = "0.1.6"
